Project v0.1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-simple-dep
  labels:
    app: todo-simple
spec:
  selector:
    matchLabels:
      app: todo-simple
  template:
    metadata:
      labels:
        app: todo-simple
    spec:
      
      volumes:
        - name: todo-simple-volume
          persistentVolumeClaim:
            claimName: todo-simple-pvc

      containers:
        - name: todo-simple
          image: hiiamtrong/todo-simple:latest
          volumeMounts:
            - mountPath: /usr/src/app/public
              name: todo-simple-volume
