Project v0.1/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-simple-svc
  labels:
    app: todo-simple
spec:
  type: ClusterIP
  selector:
    app: todo-simple
  ports:
      - protocol: TCP
        port: 2222
        targetPort: 3333
