Project v0.1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-simple-ing
  labels:
    app: todo-simple
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: todo-simple-svc
              port: 
                number: 2222
